--- a/desafio-02/projeto-acompanhado/style.css
+++ b/desafio-02/projeto-acompanhado/style.css
@@ -3,9 +3,11 @@
 body {
     font-family: 'Open Sans', sans-serif;
     margin: 0;
+    background: linear-gradient(180deg, rgba(227, 255, 248, 0.00) 82.08%, rgba(227, 255, 248, 0.38) 100%);
+    min-height: 100vh;
 }
 
-ol {
+ul {
     list-style: none;
     display: flex;
     gap: 48px; /* O gap é habilitado no display flex, ele vai colocar um espaço entre os elementos, apenas entre os elementos */
@@ -13,30 +15,43 @@ ol {
     padding: 0;
 }
 
-li {
+li a {
     font-family: 'Open Sans', sans-serif;
     color: #1F1534;
+    text-decoration: none;
+    opacity: 0.5;
 }
 
-li.active {
+/* pseudo-class */
+li a:hover {
     font-weight: bold;
+    opacity: 1;
 }
 
 .page {
     width: 1000px;
-    margin: 65px auto 0;
+    margin: 0 auto;
+    padding-top: 65px;
 }
 
-header {
+nav {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+}
+
+main {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 h1 {
     font-family: 'Mulish', sans-serif;
     font-weight: normal;
     font-size: 49px;
-    margin-bottom: 40px;
+    line-height: 56px;
+    width: 490px;
 
 }
 
@@ -46,17 +61,48 @@ h1 span {
 }
 
 button {
-    font-family: 'DM Sans', sans-serif;
-    margin-top: 40px;    
+    font-family: 'Open Sans', sans-serif; 
+    border: none;
+    background-color: #69B99D;
+    padding: 14px 32px 15px;
+    color: #F9F9F9;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-transform: uppercase;
+    border-radius: 4px;
+    gap: 10px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #5b9c85;
 }
 
 .text p {
     font-size: 14px;
     color: #7D7987;
+    width: 438px;
+    line-height: 28px;
+    margin: 40px 0;
 }
 
 #balls {
     position: fixed;
     right: 0;
     bottom: 0;
+}
+
+footer {
+    font-size: 14px;
+    line-height: 28px;
+    color: #000;
+    text-align: center;
+    margin: 80px 0 30px;
+}
+
+footer a {
+    font-weight: bold;
+    text-decoration: none;
+    color: #000;
 }
