--- a/desafio-03/projeto/style.css
+++ b/desafio-03/projeto/style.css
@@ -56,6 +56,10 @@ form {
     min-height: 300px;
     border-radius: 8px 8px 0 0;
     padding: 64px;
+
+    display: flex;
+    flex-direction: column;
+    gap: 48px;
 }
 
 fieldset {
@@ -83,9 +87,8 @@ fieldset legend {
     flex-direction: column;
 }
 
-.input-wrapper label {
-    font-style: normal;
-    font-weight: 400;
+.input-wrapper label,
+.checkbox-wrapper label {
     font-size: 14px;
     line-height: 24px;
     color: #4E4958;
@@ -103,7 +106,9 @@ fieldset legend {
     color: #6C6A71;
 }
 
-.input-wrapper input, .input-wrapper textarea {
+.input-wrapper input, 
+.input-wrapper textarea,
+.input-wrapper select {
     background: #FAFAFC;
     border: 1px solid #E6E6F0;
     box-sizing: border-box; /* Calculo do tamanho da caixa */
@@ -122,4 +127,70 @@ fieldset legend {
     padding: 0;
     height: 168px;
     resize: none;
+}
+
+/* prefix appearance */
+
+.input-wrapper select {
+    appearance: none;
+    -moz-appearance: none; /* Mozilla */
+    -webkit-appearance: none; /* Chrome */
+    -ms-progress-appearance: none; /* Microsoft Edge */
+
+    /* Permite inserir uma URL 
+        A imagem esta em Base64 - imagem convertida para texto
+    */
+    background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg clip-path='url(%23clip0_1_54)'%3E%3Cpath d='M8 10L12 14L16 10' stroke='%239C98A6' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='clip0_1_54'%3E%3Crect width='24' height='24' fill='white'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E%0A");
+    background-repeat: no-repeat; /* Não há repetição do background */
+    background-position: right 24px top 50%;
+}
+
+.col-3 {
+    display: flex;
+    gap: 20px;
+}
+
+/* Pegar elementos apenas em primeiro nível */
+.col-3 > div:nth-child(1) {
+    width: 100%;
+}
+
+.checkbox-wrapper {
+    position: relative;
+}
+
+.checkbox-wrapper label {
+    margin: 0;
+    display: flex;
+    align-items: center;
+    gap: 16px;
+}
+
+/* Eu não posso deixar ele no display none para efeitos acessibilidade */
+.checkbox-wrapper input {
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0; /* Invisível */
+    width: 24px;
+    height: 24px;
+}
+
+.checkbox-wrapper label::before {
+    content: '';
+    width: 24px;
+    height: 24px;
+    border: 1px solid #E6E6F0;
+    border-radius: 8px;
+    display: block;
+}
+
+/* Quando estiver checked, eu pego o label::before do checkbox-wrapper */
+.checkbox-wrapper input:checked + label::before {
+    background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg clip-path='url(%23clip0_2701_23)'%3E%3Cpath d='M9 16.17L4.83 12L3.41 13.41L9 19L21 7L19.59 5.59L9 16.17Z' fill='%2342D3FF'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='clip0_2701_23'%3E%3Crect width='24' height='24' fill='white'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E%0A");
+
+}
+
+.checkbox-wrapper input:focus + label::before {
+    outline: 2px solid black;
 }
