--- a/desafio-03/recriando-layout01/style.css
+++ b/desafio-03/recriando-layout01/style.css
@@ -74,6 +74,7 @@ fieldset {
     display: flex;
     flex-direction: column;
     gap: 24px;
+    margin-top: 16px;
 }
 
 fieldset legend {
@@ -84,11 +85,13 @@ fieldset legend {
     line-height: 34px;
     text-transform: uppercase;
     border-bottom: 1px solid #E6E6F0;
+    margin-bottom: 16px;
 }
 
 .input-wrapper {
     display: flex;
     flex-direction: column;
+    margin-top: 16px;
 }
 
 .col-2 {
@@ -125,4 +128,42 @@ fieldset legend {
     background: #FAFAFC;
     border-radius: 8px;
     border: 1px solid #E6E6F0;
+}
+
+.col-3 {
+    display: flex;
+    gap: 10px;
+}
+
+.fieldset-wrapper h2 {
+    font-size: 20px;
+    color: #535971;
+    line-height: 34px;
+}
+
+footer {
+    background: #535971;
+    border-radius: 0 0 20px 20px;
+    padding: 71px 52px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 417px;
+}
+
+footer .button {
+    width: 608px;
+    height: 56px;
+    background: #FF5374;
+    border-radius: 20px;
+    color: #FFF;
+    font-family: 'Staatliches', sans-serif;
+    border: none;
+    padding: 15px 40px;
+    font-weight: bold;
+    cursor: pointer;   
+}
+
+footer .button:hover {
+    background: rgb(207, 68, 96);   
 }
